k8s/apps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-service
  template:
    metadata:
      labels:
        app: mock-service
    spec:
      containers:
        - name: mock-service
          image: mock-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /docs
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /docs
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: mock-service
spec:
  selector:
    app: mock-service
  ports:
    - port: 5000
      targetPort: 5000

# ---------------- HPA for Mock Service ----------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dhv
  template:
    metadata:
      labels:
        app: dhv
    spec:
      containers:
        - name: dhv
          image: dhv:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: dhv
spec:
  selector:
    app: dhv
  ports:
    - port: 8000
      targetPort: 8000

# ---------------- HPA for DHV ----------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
